# mod_dims

./: Makefile.in  autorun.sh  configure.ac
src/: Makefile.in  mod_dims.c  mod_dims.h  mod_dims_ops.c  smartcrop.c
